# kis_exam

./: .gitignore  CMakeLists.txt  README.md
include/: App.h  Task.h  Trie.h
src/: App.cpp  Task.cpp  Trie.cpp  main.cpp
